--- a/package.json
+++ b/package.json
@@ -13,6 +13,8 @@
   "dependencies": {
     "dotenv": "^17.2.3",
     "express": "^5.2.1",
+    "mysql2": "^3.15.3",
+    "sequelize": "^6.37.7",
     "uuid": "^13.0.0",
     "winston": "^3.19.0",
     "winston-daily-rotate-file": "^5.0.0",
@@ -22,6 +24,7 @@
     "@types/express": "^5.0.6",
     "@types/node": "^25.0.2",
     "nodemon": "^3.1.11",
+    "sequelize-cli": "^6.6.3",
     "ts-node": "^10.9.2",
     "typescript": "^5.9.3"
   }
