--- a/package.json
+++ b/package.json
@@ -11,6 +11,8 @@
     "dev": "nodemon src/server.ts"
   },
   "dependencies": {
+    "@prisma/adapter-mariadb": "^7.2.0",
+    "@prisma/client": "^7.2.0",
     "dotenv": "^17.2.3",
     "express": "^5.2.1",
     "uuid": "^13.0.0",
@@ -20,8 +22,9 @@
   },
   "devDependencies": {
     "@types/express": "^5.0.6",
-    "@types/node": "^25.0.2",
+    "@types/node": "^25.0.3",
     "nodemon": "^3.1.11",
+    "prisma": "^7.2.0",
     "ts-node": "^10.9.2",
     "typescript": "^5.9.3"
   }
