--- a/BookingService/package.json
+++ b/BookingService/package.json
@@ -15,6 +15,8 @@
     "@prisma/client": "^7.2.0",
     "dotenv": "^17.2.3",
     "express": "^5.2.1",
+    "ioredis": "^5.8.2",
+    "redlock": "^5.0.0-beta.2",
     "uuid": "^13.0.0",
     "winston": "^3.19.0",
     "winston-daily-rotate-file": "^5.0.0",
