--- a/BookingService/package.json
+++ b/BookingService/package.json
@@ -13,6 +13,7 @@
   "dependencies": {
     "@prisma/adapter-mariadb": "^7.2.0",
     "@prisma/client": "^7.2.0",
+    "bullmq": "^5.66.4",
     "dotenv": "^17.2.3",
     "express": "^5.2.1",
     "ioredis": "^5.8.2",
